--- a/appSort/SortLab/src/styles.scss
+++ b/appSort/SortLab/src/styles.scss
@@ -296,8 +296,8 @@ body {
 
 *
 {
-  font-family: 'Public Sans', sans-serif;
-  box-sizing: border-box;
+  font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
 }
 
 //.cdk-overlay-container {
