--- a/appSort/SortLab/src/app/app.component.html
+++ b/appSort/SortLab/src/app/app.component.html
@@ -4,6 +4,8 @@
   <div class="section2">
     <router-outlet></router-outlet>
   </div>
-  <div class="section3"></div>
+  <div class="section3">
+
+  </div>
 
 </div>
