--- a/appSort/SortLab/src/app/shared/components/narbar/narbar.component.html
+++ b/appSort/SortLab/src/app/shared/components/narbar/narbar.component.html
@@ -1,11 +1,16 @@
 <mat-toolbar color="primary" class="navbar">
+  <!-- Logo -->
   <div class="logo">
-    <img src="https://static.wixstatic.com/media/978237_8660eaec11ba4f338aa6585b70cc77af~mv2.png/v1/fit/w_2500,h_1330,al_c/978237_8660eaec11ba4f338aa6585b70cc77af~mv2.png">
+    <img src="https://static.wixstatic.com/media/978237_8660eaec11ba4f338aa6585b70cc77af~mv2.png">
     <span>SortLab</span>
   </div>
 
+  <!-- Nút menu dành cho mobile -->
+  <mat-icon class="menu-icon" (click)="toggleMobileMenu()">menu</mat-icon>
 
-  <div class="sort-buttons">
+  <!-- Menu desktop -->
+  <div class="sort-buttons desktop-menu">
+    <!-- Các button sorting -->
     <button mat-button [routerLink]="'/shell-sort'" [ngClass]="{'active': isActive('/shell-sort')}">
       Shell sort
     </button>
@@ -25,12 +30,11 @@
       Insertion sort
     </button>
 
-    <!-- Nút mở menu, hiển thị option đã chọn -->
+    <!-- Dropdown -->
     <button mat-button [matMenuTriggerFor]="comparisonMenu" [ngClass]="{'active': isActive(currentRoute)}">
       {{ selectedOption }} <mat-icon>arrow_drop_down</mat-icon>
     </button>
 
-    <!-- Menu Dropdown -->
     <mat-menu #comparisonMenu="matMenu">
       <button mat-menu-item [routerLink]="'/1-process'" (click)="selectOption('One PRC', '/1-process')">
         One PRC
@@ -42,8 +46,29 @@
         Six PRC
       </button>
     </mat-menu>
+  </div>
+  <div class="mobile-menu" [ngClass]="{ 'open': isMobileMenuOpen }">
+    <a routerLink="/shell-sort" (click)="toggleMobileMenu()">Shell sort</a>
+    <a routerLink="/radix-sort" (click)="toggleMobileMenu()">Radix sort</a>
+    <a routerLink="/selection-sort" (click)="toggleMobileMenu()">Selection sort</a>
+    <a routerLink="/bubble-sort" (click)="toggleMobileMenu()">Bubble sort</a>
+    <a routerLink="/quick-sort" (click)="toggleMobileMenu()">Quick sort</a>
+    <!-- Mobile Dropdown -->
+    <div class="mobile-dropdown" (click)="toggleDropdown()" [class.open]="isDropdownOpen">
+      <div class="dropdown-label">
+        {{ selectedOption }} <mat-icon [class.rotate]="isDropdownOpen">arrow_drop_down</mat-icon>
+      </div>
+
+      <div class="dropdown-options" [class.open]="isDropdownOpen">
+        <a class="title-menu" routerLink="/1-process" (click)="selectOption('One PRC', '/1-process'); toggleMobileMenu()">One PRC</a>
+        <a class="title-menu" routerLink="/2-process" (click)="selectOption('Two PRC', '/2-process'); toggleMobileMenu()">Two PRC</a>
+        <a class="title-menu" routerLink="/6-process" (click)="selectOption('Six PRC', '/6-process'); toggleMobileMenu()">Six PRC</a>
+      </div>
+    </div>
 
 
   </div>
+
 </mat-toolbar>
 
+<!-- Mobile menu content -->
